Changes in the UI effects.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <section id="applications" data-aos="fade-up">
         <div class="container">
-            <h1 class="text-center mb-4">My Projects</h1>
-            <p class="text-center mb-5">These are my works using different technologies.</p>
+            <h1 class="text-center mb-4" data-aos="fade-up">My Projects</h1>
+            <p class="text-center mb-5" data-aos="fade-up">These are my works using different technologies.</p>
             <div class="row">
                 <!-- Card 1 -->
                 <div class="col-md-4 mb-4" data-aos="fade-up">
@@ -65,7 +65,7 @@
                 </div>
 
                 <!-- Card 2 -->
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="card">
                         <img src="./images/e-alert.png" class="card-img-top img-fluid" alt="E-Alert">
                         <div class="card-body">
@@ -77,7 +77,7 @@
                 </div>
 
                 <!-- Card 3 -->
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="card">
                         <img src="./images/mobile.jpg" class="card-img-top img-fluid" alt="E-Alert Mobile">
                         <div class="card-body">
@@ -91,7 +91,7 @@
 
             <div class="row mt-4">
                 <!-- Card 4 -->
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4"data-aos="fade-up">
                     <div class="card">
                         <img src="./images/3gx.png" class="card-img-top img-fluid" alt="Internship Project">
                         <div class="card-body">
@@ -103,7 +103,7 @@
                 </div>
 
                 <!-- Card 5 -->
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="card">
                         <img src="./images/calculator.png" class="card-img-top img-fluid" alt="Calculator">
                         <div class="card-body">
@@ -115,7 +115,7 @@
                 </div>
 
                 <!-- Card 6 -->
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="card">
                         <img src="./images/under.png" class="card-img-top img-fluid" alt="School Activities">
                         <div class="card-body">
@@ -135,7 +135,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <div class="card shadow-sm mb-4">
+                    <div class="card shadow-sm mb-4" data-aos="fade-up">
                         <div class="card-header text-center">Background</div>
                         <div class="card-body">
                             <p style="text-align: justify;">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <!-- Mission Card -->
-                    <div class="card shadow-sm mb-4">
+                    <div class="card shadow-sm mb-4"data-aos="fade-up">
                         <div class="card-header" style="text-align: center;">Mission</div>
                         <div class="card-body">
                             <p style="text-align: justify;">
@@ -154,7 +154,7 @@
                     </div>
 
                     <!-- Services Card -->
-                    <div class="card shadow-sm mb-4">
+                    <div class="card shadow-sm mb-4" data-aos="fade-up">
                         <div class="card-header" style="text-align: center;">Services I Offer</div>
                         <div class="card-body" style="background-color: transparent;">
                             <ul class="list-group list-group-flush">
