--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <section id="applications" data-aos="fade-up">
+    <section id="applications" data-aos="fade-up" style="padding-top: 50px;">
         <div class="container">
             <h1 class="text-center mb-4" data-aos="fade-up">My Projects</h1>
             <p class="text-center mb-5" data-aos="fade-up">These are my works using different technologies.</p>
