--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section id="landing" data-aos="fade-up">
     <div class="container-fluid">
       <div class="container-fluid" data-aos="zoom-in" data-aos-duration="2000">
-        <h1>Full Stack Web Developer</h1>
+        <h1>Full Stack Developer</h1>
         <h2>Aisiah Santiago</h2>
         <p>Hi! I am looking for a Mobile and Web Developer position</p>
       </div>
