--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 				<i class="fas fa-map-marker-alt"></i>
 			  </div>
 			  <h3>Location</h3>
-			  <p>Naga City, Camarines Sur</p>
+			  <p>Gainza, Camarines Sur</p>
 			</div>
 		  </div>
 		  
