--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
     </div>
   </section>
 
-  <section id="aboutme" data-aos="fade-up">
+  <section id="aboutme" data-aos="fade-up" data-aos-duration = "2000">
     <h1 class="text-center">About me!</h1>
     <div class="container py-5">
       <div class="row justify-content-center">
         <div class="col-md-8">
-          <div class="card shadow-sm mb-4" data-aos="fade-up">
+          <div class="card shadow-sm mb-4" data-aos="fade-up" data-aos-duration = "2000">
             <div class="card-header text-center">Background</div>
             <div class="card-body">
               <p style="text-align: justify;">
@@ -147,7 +147,7 @@
             </div>
           </div>
           <!-- Mission Card -->
-          <div class="card shadow-sm mb-4" data-aos="fade-up">
+          <div class="card shadow-sm mb-4" data-aos="fade-up" data-aos-duration = "2000">
             <div class="card-header" style="text-align: center;">Mission</div>
             <div class="card-body">
               <p style="text-align: justify;">
@@ -157,7 +157,7 @@
           </div>
 
           <!-- Services Card -->
-          <div class="card shadow-sm mb-4" data-aos="fade-up">
+          <div class="card shadow-sm mb-4" data-aos="fade-up" data-aos-duration = "2000">
             <div class="card-header" style="text-align: center;">Services I Offer</div>
             <div class="card-body" style="background-color: transparent;">
               <ul class="list-group list-group-flush">
@@ -179,7 +179,7 @@
   </section>
 
 	<!-- Update the contact section in index.html -->
-	<section id="contact" data-aos="fade-up">
+	<section id="contact" data-aos="fade-up" data-aos-duration = "2000">
 	  <div class="container py-5">
 		<h1 class="text-center mb-5">Get in Touch</h1>
 		<div class="row justify-content-center g-4">
@@ -195,7 +195,7 @@
 		  </div>
 		  
 		  <!-- Contact Card 2 -->
-		  <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="100">
+		  <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-duration = "2000">
 			<div class="contact-card">
 			  <div class="card-icon">
 				<i class="fas fa-envelope"></i>
@@ -206,7 +206,7 @@
 		  </div>
 
 		  <!-- Contact Card 3 -->
-		  <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+		  <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-duration = "2000">
 			<div class="contact-card">
 			  <div class="card-icon">
 				<i class="fas fa-phone"></i>
@@ -217,7 +217,7 @@
 		  </div>
 
 		  <!-- Social Links Card -->
-		  <div class="col-md-8" data-aos="zoom-in-up" data-aos-delay="300">
+		  <div class="col-md-8" data-aos="zoom-in-up" data-aos-duration = "2000">
 			<div class="social-card">
 			  <h3 class="text-center mb-4">Connect With Me</h3>
 			  <div class="social-links d-flex justify-content-center flex-wrap">
