Added qr code for projects

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
   </nav>
 
-  <section id="landing" data-aos="fade-up">
+  <section id="landing" data-aos="fade-up" data-aos-duration = "2000">
     <div class="container-fluid">
       <div class="container-fluid" data-aos="zoom-in" data-aos-duration="2000">
         <h1>Full Stack Developer</h1>
@@ -56,10 +56,10 @@
     </div>
   </section>
 
-  <section id="applications" data-aos="fade-up" style="padding-top: 50px;">
+  <section id="applications" data-aos="fade-up" data-aos-duration = "2000" style="padding-top: 50px;">
     <div class="container">
-      <h1 class="text-center mb-4" data-aos="fade-up">My Projects</h1>
-      <p class="text-center mb-5" data-aos="fade-up">These are my works using different technologies.</p>
+      <h1 class="text-center mb-4" data-aos="fade-up" data-aos-duration = "2000">My Projects</h1>
+      <p class="text-center mb-5" data-aos="fade-up" data-aos-duration = "2000">These are my works using different technologies.</p>
       <div class="row">
         <!-- Card 1 -->
         <div class="col-md-4 mb-4" data-aos="fade-right" data-aos-duration="2000">
@@ -129,6 +129,41 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="row mt-4">
+        <!-- Card 7 -->
+        <div class="col-md-4 mb-4" data-aos="fade-right" data-aos-duration="2000">
+          <div class="card">
+            <img src="./images/qr_code_scanner.png" class="card-img-top img-fluid" alt="QR CODE SCANNER">
+            <div class="card-body">
+              <h5 class="card-title">QR CODE SCANNER</h5>
+              <p class="card-text">A mobile and web application for QR Code Scanner and Generator.</p>
+              <a href="https://qrcode-scanner-c9f84.web.app/" target="_blank" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+        </div>
+        <!-- 
+        <div class="col-md-4 mb-4" data-aos="flip-left" data-aos-duration="2000">
+          <div class="card">
+            <img src="./images/calculator.png" class="card-img-top img-fluid" alt="Calculator">
+            <div class="card-body">
+              <h5 class="card-title">Calculator</h5>
+              <p class="card-text">A basic calculator using HTML, CSS, Bootstrap, and JavaScript.</p>
+              <a href="https://aisiahhh.github.io/SimpleCalculator/" target="_blank" class="btn btn-primary">Go to Calculator</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4" data-aos="fade-left" data-aos-duration="2000">
+          <div class="card">
+            <img src="./images/under.png" class="card-img-top img-fluid" alt="School Activities">
+            <div class="card-body">
+              <h5 class="card-title">School Activities</h5>
+              <p class="card-text">A collection of programming activities using Java, HTML, Bootstrap, CSS, and Ruby on Rails.</p>
+              <a href="https://drive.google.com/drive/folders/1B9AY5uiNF4ZcOjblinPtylR6j3uFFXY1?usp=sharing" target="_blank" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div> -->
       </div>
     </div>
   </section>
